# ComfyUI-Simple-IndexTTs

./: README.md  __init__.py  main.py  pyproject.toml  requirements.txt
examples/: 单个音频生成.json  音频组生成.json
indextts/: cli.py
indextts/BigVGAN/: bigvgan.py  models.py
indextts/gpt/: conformer_encoder.py  model_v2.py
indextts/s2mel/: wav2vecbert_extract.py
indextts/s2mel/dac/: __main__.py
indextts/s2mel/dac/utils/: __init__.py  decode.py  encode.py
indextts/s2mel/modules/: commons.py
indextts/utils/: maskgct_utils.py
indextts/utils/maskgct/models/codec/kmeans/: repcodec_model.py
locales/zh/: main.json  nodeDefs.json
nodes/: autoLoadModel.py  emotions.py  test.py  ttsByAudio.py
server/: infer_v2.py
